--- a/WindStations.WebUI/WindStations.WebUI.csproj
+++ b/WindStations.WebUI/WindStations.WebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,11 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazor.Bootstrap" Version="2.2.0" />
+    <PackageReference Include="Blazor.Bootstrap" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Blazor.Charts" Version="27.1.50" />
+    <PackageReference Include="Syncfusion.Blazor.Navigations" Version="27.1.50" />
+    <PackageReference Include="Syncfusion.Blazor.Notifications" Version="27.1.50" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="27.1.50" />
   </ItemGroup>
 
   <ItemGroup>
